fix(iframe-drawer): prevent top content from covering issues (#1249)

--- a/src/styles/removeBiliTopBar.scss
+++ b/src/styles/removeBiliTopBar.scss
@@ -22,3 +22,9 @@
     margin-top: calc(-1 * var(--bew-top-bar-height)) !important;
   }
 }
+
+.remove-bili-top-bar-without-placeholder {
+  #biliMainHeader {
+    display: none;
+  }
+}
